<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/gradient"
        android:orientation="vertical"
        tools:context=".Details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:contentDescription="@string/conferenceTitle2"
                android:scaleType="fitStart"

                app:srcCompat="@drawable/kuberdocker" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/conferenceTitle2"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/conferenceDescription2"
                android:textAlignment="viewStart"
                android:textColor="#fff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnSpeakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#2b2b2b"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/conferenceSpeaker2"
                android:textAlignment="textStart"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btnSponsors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="#2b2b2b"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/conferenceSponsor2"
                android:textAlignment="textStart"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/txtAttendees"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/conferenceAttendees2"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/shareWith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:text="@string/share"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="#1DA1F2"
                android:contentDescription="@string/twitter"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/twitter" />
        </LinearLayout>
    </ScrollView>
