<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralScheduleFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/personalEvent1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/layout_border"
            android:minHeight="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imgPersonalEvent1"
                android:layout_width="110dp"
                android:layout_height="69dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/conferenceTitle2"
                android:src="@drawable/jenkins"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titlePersonalEvent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/conferenceTitle3"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPersonalEvent1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionPersonalEvent1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/conferenceDescription3"
                android:textAlignment="textStart"
                android:textColor="#FFF"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPersonalEvent1"
                app:layout_constraintTop_toBottomOf="@+id/titlePersonalEvent1" />

            <TextView
                android:id="@+id/speakersPersonalConference1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/conferenceSpeaker3"
                android:textAlignment="textStart"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPersonalEvent1"
                app:layout_constraintTop_toBottomOf="@+id/descriptionPersonalEvent1" />

            <TextView
                android:id="@+id/sponsorsPersonalConference1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/conferenceSponsor3"
                android:textAlignment="textStart"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgPersonalEvent1"
                app:layout_constraintTop_toBottomOf="@+id/speakersPersonalConference1" />

            <TextView
                android:id="@+id/attendeesPersonalConference1"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/conferenceAttendees3"
                android:textAlignment="textEnd"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sponsorsPersonalConference1"
                app:layout_constraintVertical_bias="0.0" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>