<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ListSpeakers"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/attendee1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_border"
            android:minHeight="125dp">

            <ImageView
                android:id="@+id/imgAttendee1"
                android:layout_width="110dp"
                android:layout_height="95dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/sponsor1"
                android:src="@drawable/attendee1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameAttendee1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeName1"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/occupationAttendee1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeOccupation1"
                android:textAlignment="textStart"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee1"
                app:layout_constraintTop_toBottomOf="@+id/nameAttendee1" />

            <TextView
                android:id="@+id/workplaceAttendee1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/workplace1"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee1"
                app:layout_constraintTop_toBottomOf="@+id/occupationAttendee1" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/attendee2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/layout_border"
            android:minHeight="125dp">

            <ImageView
                android:id="@+id/imgAttendee2"
                android:layout_width="110dp"
                android:layout_height="95dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/attendeeName2"
                android:src="@drawable/attendee2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameAttendee2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeName2"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/occupationAttendee2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeOccupation2"
                android:textAlignment="textStart"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee2"
                app:layout_constraintTop_toBottomOf="@+id/nameAttendee2" />

            <TextView
                android:id="@+id/workplaceAttendee2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/workplace2"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee2"
                app:layout_constraintTop_toBottomOf="@+id/occupationAttendee2" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/attendee3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="125dp">

            <ImageView
                android:id="@+id/imgAttendee3"
                android:layout_width="110dp"
                android:layout_height="95dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/attendeeName3"
                android:src="@drawable/attendee3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/nameAttendee3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeName3"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.307"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/occupationAttendee3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/attendeeOccupation3"
                android:textAlignment="textStart"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee3"
                app:layout_constraintTop_toBottomOf="@+id/nameAttendee3" />

            <TextView
                android:id="@+id/workplaceAttendee3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/workplace3"
                android:textAlignment="textStart"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAttendee3"
                app:layout_constraintTop_toBottomOf="@+id/occupationAttendee3" />

        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more" />

    </LinearLayout>
</ScrollView>